[gd_scene load_steps=4 format=3 uid="uid://cpbg6m7ovnmae"]

[ext_resource type="Script" path="res://Torpedo_homing.gd" id="1_48qs2"]
[ext_resource type="Texture2D" uid="uid://db8ddpqvl7yiy" path="res://Art/torpedo_2.png" id="2_aeiv4"]
[ext_resource type="AudioStream" uid="uid://brih27dctfqlj" path="res://sounds/explode01.ogg" id="3_bcnb6"]

[node name="RigidBody2D" type="RigidBody2D" groups=["sonar_torpedo"]]
collision_layer = 8
collision_mask = 6
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_48qs2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PackedVector2Array(5, 26, 5, -29, 4, -31, 3, -32, -3, -32, -4, -31, -5.0001, -29, -5, 26, -6, 26, -7, 27, -8, 29, -9, 31, -9, 32, 9, 32, 9, 31, 8, 29, 7, 27, 6, 26)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
rotation = 1.5708
texture = ExtResource("2_aeiv4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(32, -9)
rotation = 1.5708
scale = Vector2(0.36, 1.28)
rect = Rect2(0, 0, 50, 50)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bcnb6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
